--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,14 @@
 FROM node:16.14.2-stretch-slim
 
-WORKDIR /app
+WORKDIR /usr/scr/app
 
-COPY . .
+COPY package.json ./
+COPY package-lock.json ./
 
 RUN npm install
 
+COPY . .
+
 CMD ["npm","run","start"]
+
+
