--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,22 @@
 version: '3.3'
 services:
+  reverse-proxy:
+    # The official v2 Traefik docker image
+    image: traefik:v2.6
+    # Enables the web UI and tells Traefik to listen to docker
+    command: --api.insecure=true --providers.docker
+    ports:
+      # The HTTP port
+      - "80:80"
+      # The Web UI (enabled by --api.insecure=true)
+      - "8080:8080"
+    volumes:
+      # So that Traefik can listen to the Docker events
+      - /var/run/docker.sock:/var/run/docker.sock
   frontend:
     container_name: frontend
+    labels:
+      - "traefik.http.routers.frontend.rule=Host(`frontend.docker.localhost`)"
     build: ./frontend
     ports:
       - "4141:3000"
@@ -9,6 +24,8 @@ services:
       - "./frontend/src:/usr/scr/app/src"
   backend:
     container_name: backend
+    labels:
+      - "traefik.http.routers.backend.rule=Host(`backend.docker.localhost`)"
     build: ./backend
     ports:
       - "6651:6651"
