--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,10 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
+    "eslint-plugin-react": "^7.29.4",
     "react-error-overlay": "^6.0.9"
   }
 }
