--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "type": "git",
     "url": "git+https://github.com/vitorblz/treinamento.git"
   },
+  "husky": {
+    "hooks": {
+      "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
+    }
+  },
   "author": "",
   "license": "ISC",
   "bugs": {
