--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.tsx'",
-    "lintfile:fix": "eslint 'src/**/*.tsx' --fix"
+    "lintfile:fix": "eslint src/**/*.tsx --fix"
   },
   "eslintConfig": {
     "extends": [
