feat: build in production]

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,9 +5,10 @@ WORKDIR /home/node/app
 COPY package.json ./
 COPY package-lock.json ./
 
-RUN npm ci \
-  && npm run build
+RUN npm ci
 
 COPY . .
+
+RUN npm run build
 
 CMD ["npm", "run", "start"]
