--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "npm run dev-server | npm run log-pretty",
+    "dev-server": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts",
+    "log-pretty": "npx pino-pretty --translateTime",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "lint:fix": "eslint . --ext .ts --fix",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +19,13 @@
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
+    "pino-pretty": "^7.6.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "dotenv": "^16.0.1",
+    "express": "^4.17.3",
+    "pino": "^7.11.0"
   }
 }
